--- a/src/componets/Head.css
+++ b/src/componets/Head.css
@@ -1,17 +1,17 @@
 .bgHeadStore {
-    background-image: url(https://i.ibb.co/xGBsf5W/semparar-Prancheta-2-c-pia-8.png);
+    background-image: url(https://i.ibb.co/Y0HkJ2W/semparar-Prancheta-2-co-pia-8.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bgHeadOrders {
-    background-image: url(https://i.ibb.co/q17WzXS/semparar-Prancheta-2-c-pia-3-8.png);
+    background-image: url(https://i.ibb.co/KxnxcLp/orders.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .bgHeadClients {
-    background-image: url(https://i.ibb.co/fDsDhVT/semparar-Prancheta-2-c-pia-2-8.png);
+    background-image: url(https://i.ibb.co/cTB3kLn/semparar-Prancheta-2-co-pia-2-8.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
