--- a/src/assets/css/argon-dashboard.css
+++ b/src/assets/css/argon-dashboard.css
@@ -16119,9 +16119,9 @@ textarea[resize="horizontal"] {
   font-size: 4.25rem;
 }
 
-.icon-xl+.icon-text {
+/* .icon-xl+.icon-text {
   width: calc(100% - $icon-size-xl - 1);
-}
+} */
 
 .icon-lg {
   width: 4rem;
@@ -16133,9 +16133,9 @@ textarea[resize="horizontal"] {
   font-size: 3.25rem;
 }
 
-.icon-lg+.icon-text {
+/* .icon-lg+.icon-text {
   width: calc(100% - $icon-size-lg - 1);
-}
+} */
 
 .icon-sm {
   width: 2rem;
@@ -16147,9 +16147,9 @@ textarea[resize="horizontal"] {
   font-size: 1.25rem;
 }
 
-.icon-sm+.icon-text {
+/* .icon-sm+.icon-text {
   width: calc(100% - $icon-size-sm - 1);
-}
+} */
 
 .icon-shape {
   padding: 12px;
@@ -16659,7 +16659,7 @@ textarea[resize="horizontal"] {
     position: absolute;
     width: 100%;
     bottom: 10px;
-    background: #f6f9fc;
+    background: #fafbfb;
   }
 }
 
